# DE-CondDETR

./: .gitignore  README.md  engine.py  main.py  pyproject.toml  train.py
datasets/: coco.py  coco_eval.py  panoptic_eval.py
dela_cond_detr/: .gitignore  main.py
dela_cond_detr/datasets/: __init__.py  coco.py  coco_panoptic.py  transforms.py
dela_cond_detr/models/: attention.py  conditional_detr.py  matcher.py  position_encoding.py  transformer.py
models/: __init__.py  attention.py  backbone.py  conditional_detr.py  segmentation.py
wandb/: latest-run
wandb/offline-run-20240108_164828-ix66izlx/: run-ix66izlx.wandb
wandb/offline-run-20240108_164828-ix66izlx/files/: wandb-metadata.json
wandb/offline-run-20240108_181117-cuaxysy5/: run-cuaxysy5.wandb
wandb/offline-run-20240108_181117-cuaxysy5/files/: wandb-metadata.json
wandb/offline-run-20240108_193230-onw443hw/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/offline-run-20240109_080854-7gkcllqo/: run-7gkcllqo.wandb
wandb/offline-run-20240109_080854-7gkcllqo/files/: wandb-metadata.json  wandb-summary.json
wandb/offline-run-20240109_090000-7a6s0i85/: run-7a6s0i85.wandb
wandb/offline-run-20240109_090000-7a6s0i85/files/: wandb-metadata.json
wandb/offline-run-20240109_090220-r66eja2d/files/: wandb-metadata.json  wandb-summary.json
