[tool.poetry]
name = "dela-cond-detr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "dela_cond_detr"},
]

[tool.poetry.dependencies]
python = "^3.11"
cython = "^3.0.7"
scipy = "^1.11.4"
termcolor = "^2.4.0"
wandb = "^0.16.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
pycocotools = "^2.0.7"
panopticapi = {git = "https://github.com/cocodataset/panopticapi.git"}
tqdm = "^4.66.1"
fvcore = "^0.1.5.post20221221"
detectron2 = {path = "../detectron2"}
cloudpickle = "^3.0.0"
omegaconf = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/lts/1.8/cu111"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
